Closed
Bug 928307
Opened 11 years ago
Closed 11 years ago
AWFY: SS-fannkuch regression of 60% on x86 slave on October 17th, 2013
Categories
(Core :: JavaScript Engine: JIT, defect)
Core
JavaScript Engine: JIT
Tracking
()
RESOLVED
FIXED
mozilla27
People
(Reporter: h4writer, Assigned: bhackett1024)
References
Details
Attachments
(1 file)
632 bytes,
patch
|
jandem
:
review+
|
Details | Diff | Splinter Review |
We regressed sunspider +- 2% because SS-fannkuch has regressed with 60% on October 17th, 2013. Regression range is: http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=dca0f18f3e86&tochange=5a58e6669962
Manually running a bisect gives:
Bug 925962 - Track expected contents of stack type sets in compiler constraints
Assignee | ||
Comment 1•11 years ago
|
||
In fannkuch the first IonScript that is built gets invalidated as one of the inner |if| statements hasn't executed yet and populates some new stack type sets when it does. This happened both before and after the 785905 stuff, but now we detect the invalidation when finishing the compilation and immediately rebuild the script. That isn't great, as the script should be reprimed in baseline by resetting its use count to gather more type information. This patch makes that fix, and improves fannkuch perf a good deal. It is still about 10% slower than before bug 921902, though that will improve once bug 785905 is (finally) done.
Assignee: nobody → bhackett1024
Attachment #819063 -
Flags: review?(jdemooij)
Updated•11 years ago
|
Attachment #819063 -
Flags: review?(jdemooij) → review+
Assignee | ||
Comment 2•11 years ago
|
||
Comment 3•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
You need to log in
before you can comment on or make changes to this bug.
Description
•