Bug 928307 - Reset use count for scripts whose Ion code is invalided when finishing, r=jandem.